# SigmaMediaServer

./: .env_template  .gitignore  Cargo.toml  README.md
certs/: cert.pem  key.pem
crates/rtcp/: Cargo.toml
media_server/: .env_template  Cargo.toml
media_server/crates/file_storage/: Cargo.toml
media_server/crates/file_storage/src/: lib.rs  server.rs
media_server/crates/h264_still_image/: Cargo.toml
media_server/crates/h264_still_image/src/: depacketizer.rs  main.rs  nal.rs  rtp.rs  rtp_dump.rs
media_server/crates/notification_bus/: Cargo.toml
media_server/crates/notification_bus/src/: lib.rs  server.rs
media_server/crates/sdp/: Cargo.toml
media_server/crates/sdp/src/: lib.rs  line_parsers.rs  resolvers.rs
media_server/crates/sdp/tests/: streamer_offer.rs  viewer_offer.rs
media_server/crates/thumbnail_image_extractor/: Cargo.toml
media_server/crates/thumbnail_image_extractor/src/: access_unit_decoder.rs  extractor.rs  lib.rs  nal.rs  rtp.rs  rtp_dump.rs
media_server/crates/thumbnail_image_extractor/tests/: extractor.rs
media_server/crates/videoframe_decoder/: Cargo.toml
media_server/crates/videoframe_decoder/src/: lib.rs  main.rs
media_server/src/: acceptor.rs  client.rs  config.rs  http.rs  http_legacy.rs  http_server.rs  ice_registry.rs  main.rs  rnd.rs  routes.rs  rtp.rs  sdp.rs  sdp_2.rs  server.rs  stun.rs  thumbnail.rs  thumbnail_image.rs
media_server/src/asd/: test.html
media_server/src/http/: mod.rs  parsers.rs  response_builder.rs  router.rs  server.rs  server_builder.rs
media_server/src/http/routes/: mod.rs  rooms.rs  whep.rs  whip.rs
public/: index.html  index.js
public/assets/: index-b7b5d8bd.css
src/: acceptor.rs  client.rs  config.rs  event_bus.rs  http.rs  iceRegistry.rs  ice_registry.rs  index.html  main.rs  main_legacy.rs  media_header.rs  packet_type.rs  rtcp_reporter.rs  rtp_replay_buffer.rs  rtp_reporter.rs  sdp.rs  server.rs  socket.rs  stun.rs  thumbnail.rs
src/actors/: dtls_actor.rs  get_packet_type.rs  keepalive_actor.rs  media_digest_actor.rs  media_ingest_actor.rs  mod.rs  nack_responder.rs  nominated_stun_actor.rs  receiver_report_actor.rs  rtp_actor.rs  (+9 more)
webapp/: package-lock.json  package.json  rollup.config.mjs
(+27 files in other folders)
