[package]
name = "dtls-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.64"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
byteorder = "1.5.0"
crc32fast = "1.4.0"
srtp = "0.7.0"