[package]
name = "sinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.64"
rand = "0.8.5"
byteorder = "1.5.0"
crc32fast = "1.4.0"
srtp = "0.7.0"
threadpool = "1.8.1"
webp = "0.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
bytes = "1.9.0"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1", features = ["full"] }
hyper = "1.6.0"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.11", features = ["full"] }
rtcp = { workspace = true }
sdp = { workspace = true }
thumbnail_image_extractor = { workspace = true }
[workspace]
members = ["crates/thumbnail_image_extractor", "crates/sdp", "crates/rtcp"]
[workspace.dependencies]
sdp = { path = "crates/sdp" }
thumbnail_image_extractor = { path = "crates/thumbnail_image_extractor" }
rtcp = { path = "crates/rtcp" }

