[package]
name = "sinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.64"
rand = "0.8.5"
byteorder = "1.5.0"
crc32fast = "1.4.0"
srtp = "0.7.0"
threadpool = "1.8.1"
openh264 = "0.6.2"
sdp = { workspace = true }
notification_bus = { workspace = true }
thumbnail_image_extractor = { workspace = true }
file_storage = { workspace = true }
[workspace]
members = ["crates/thumbnail_image_extractor", "crates/notification_bus", "crates/sdp", "crates/file_storage"]
[workspace.dependencies]
sdp = { path = "crates/sdp" }
notification_bus = { path = "crates/notification_bus" }
thumbnail_image_extractor = { path = "crates/thumbnail_image_extractor" }
file_storage = { path = "crates/file_storage" }
